pp2/samples/switchbad3.out

*** Error line 8.
        default:
        ^^^^^^^
*** syntax error

